...
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_8dp"
            tools:text="2.7.0" />

        <Button
            android:id="@+id/signIn"
            style="@style/Button.RoundedBlueButton.RoundedTransparentButton"
            android:layout_above="@+id/label_version"
            android:text="@string/sign_in" />

        <RadioGroup
            android:id="@+id/env_container"
...
