...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/toolbarTitle"
                            style="@style/Toolbar.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:maxLines="1"
                            tools:text="@string/app_name"
...

            </FrameLayout>

        </LinearLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/black_90_opaq"
            android:fitsSystemWindows="false"
            app:itemBackground="@color/navigation_item"
...
