...
                        android:padding="10dp"
                        android:scaleType="fitXY"
                        tools:src="@drawable/ic_user_icon"
                        android:src="@{settingsFragmentViewModel.userImage}" />

                    <TextView
                        android:id="@+id/usersName"
                        style="@style/RATextView.MontserratLight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/usersPhoto"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/users_name_6dp"
...
                <android.view.View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rate_driver_divider_height"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/signOut"
                    style="@style/RATextView.MontserratRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/sign_out"
                    android:textColor="@color/drawer_icon"
...
